image url change

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
     <h1 class="work">my <span>projects</span></h1>
     <div class="main3">
 <div class="pimag">
-    <img src="/images/calculator.jpg" alt="hover image">
+    <img src="calculator.jpg" alt="hover image">
     <div class="imgtext">
         <h2>calculator project</h2>
     </div>
 </div>
 <div class="pimag">
-    <img src="/images/amazon.jpg" alt="hover image">
+    <img src="amazon.jpg" alt="hover image">
     <div class="imgtext">
         <h2>amazon project</h2>
     </div>
 </div>
 <div class="pimag">
-    <img src="/images/netflex.jpg" alt="hover image">
+    <img src="netflex.jpg" alt="hover image">
     <div class="imgtext">
         <h2>netflix project</h2>
     </div>
